flushed out cityimages page

--- a/cityimages.html
+++ b/cityimages.html
@@ -27,4 +27,10 @@
         </li>
      </ul>
     </nav>
+    <img src="images/city1.png">
+    <img src="images/city1.png">
+    <br>
+    
+    <img src="images/city1.png">
+    <img src="images/city1.png">
 </body>
