--- a/cityimages.html
+++ b/cityimages.html
@@ -1,36 +1,33 @@
-<head>
-    <title>
-        STS
-    </title>
-</head>
-<body>
-    <header>
+<link rel="stylesheet" href="css/main.css">
+
+<style>
+    .photo{
+        width: 45vw;
+        height: 45vw;   
+        border-radius: 23vw;
+    }
+
+    .photo:hover {
+        border-radius: 0vw;
+        
+    }
+</style>   
+<header>
         <h1>
-            City Images
+          New york City
         </h1>
     </header>
 <nav>
-    <ul>
-        <li>
-            <a href="index.html">
-            <button>
-               Home
-            </button>
-            </a>
-        </li>
-        <li>
-            <a href="cityimages.html">
-            <button>
-                city images
-            </button>
-            </a>
-        </li>
-     </ul>
-    </nav>
-    <img src="images/city1.png">
-    <img src="images/city1.png">
-    <br>
+      <a href="index.html">Home</a>
+      <a href="cityimages.html">City Images</a>            
+      </nav>
+    <h2>
+        Photos
+    </h2>
+
     
-    <img src="images/city1.png">
-    <img src="images/city1.png">
-</body>
+
+    <img src="images/malte-schmidt-enGr5YbjQKQ-unsplash.jpg" class="Photo">
+    <img src="images/emiliano-bar-kheTI8pIywU-unsplash.jpg" class="Photo">
+     <img src="images/andre-benz-_T35CPjjSik-unsplash.jpg" class="Photo">
+    <img src="images/finn-6zr9ctxTmUo-unsplash.jpg" class="photo"> 
