--- a/cityimages.html
+++ b/cityimages.html
@@ -14,9 +14,7 @@
         Photos
     </h2>
 
-    
-
     <img src="images/malte-schmidt-enGr5YbjQKQ-unsplash.jpg" class="Photo">
     <img src="images/emiliano-bar-kheTI8pIywU-unsplash.jpg" class="Photo">
      <img src="images/andre-benz-_T35CPjjSik-unsplash.jpg" class="Photo">
-    <img src="images/finn-6zr9ctxTmUo-unsplash.jpg" class="photo"> 
+    <img src="images/finn-6zr9ctxTmUo-unsplash.jpg" class="Photo"> 
