--- a/cityimages.html
+++ b/cityimages.html
@@ -1,20 +1,27 @@
-<link rel="stylesheet" href="css/main.css">
-
-
-<header>
-        <h1>
-          New york City
-        </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>New York City Photos</title>
+</head>
+<body>
+    <header>
+        <h1>New York City</h1>
     </header>
-<nav>
-      <a href="index.html">Home</a>
-      <a href="cityimages.html">City Images</a>            
-      </nav>
-    <h2>
-        Photos
-    </h2>
-
-    <img src="images/malte-schmidt-enGr5YbjQKQ-unsplash.jpg" class="Photo">
-    <img src="images/emiliano-bar-kheTI8pIywU-unsplash.jpg" class="Photo">
-     <img src="images/andre-benz-_T35CPjjSik-unsplash.jpg" class="Photo">
-    <img src="images/finn-6zr9ctxTmUo-unsplash.jpg" class="Photo"> 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cityimages.html">City Images</a>
+    </nav>
+    <section>
+        <h2>Photos</h2>
+        <div class="photo-gallery">
+            <img src="images/malte-schmidt-enGr5YbjQKQ-unsplash.jpg" class="Photo">
+            <img src="images/emiliano-bar-kheTI8pIywU-unsplash.jpg" class="Photo">
+            <img src="images/andre-benz-_T35CPjjSik-unsplash.jpg" class="Photo">
+            <img src="images/finn-6zr9ctxTmUo-unsplash.jpg" class="Photo">
+        </div>
+    </section>
+</body>
+</html>
