--- a/index.html
+++ b/index.html
@@ -1,77 +1,53 @@
-<link rel="stylesheet" href="css/main.css">
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>New York City</title>
+</head>
+<body>
     <header>
-        <h1>
-            New York City
-        </h1>
+        <h1>New York City</h1>
     </header>
-<nav>
-            <a href="index.html">Home</a>
-            <a href="cityimages.html">City Images</a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cityimages.html">City Images</a>
     </nav>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio tempor orci dapibus ultrices in iaculis nunc sed. Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Adipiscing elit ut aliquam purus sit amet luctus venenatis lectus. Massa enim nec dui nunc. Quis lectus nulla at volutpat. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Nullam vehicula ipsum a arcu cursus vitae congue mauris. Aliquet risus feugiat in ante metus dictum at tempor. Varius vel pharetra vel turpis nunc eget lorem dolor. Eleifend quam adipiscing vitae proin. At risus viverra adipiscing at in tellus integer. Et sollicitudin ac orci phasellus egestas tellus. Justo donec enim diam vulputate ut. Magna ac placerat vestibulum lectus. Quisque sagittis purus sit amet. Sollicitudin nibh sit amet commodo nulla facilisi. 
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Molestie a iaculis at erat pellentesque adipiscing commodo elit at. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Varius morbi enim nunc faucibus a pellentesque sit. Adipiscing at in tellus integer feugiat. At varius vel pharetra vel turpis nunc eget lorem. Adipiscing elit duis tristique sollicitudin nibh. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Id cursus metus aliquam eleifend mi in nulla posuere. Facilisis magna etiam tempor orci.    
-    </p>
-
-<h2>
-    Leaders
-</h2>
-
-<div>
-<table class="table-center">
-     
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Email
-        </th>
-        <th>
-            Phone
-        </th>
-    </tr>
-    <tr>
-        <td>
-            Jeffrey Espinal
-        </td>
-        <td>
-            Jespinal1193@gmail.com
-        </td>
-        <td>
-            347-373-3592
-        </td>
-    </tr>
-    <tr>
-        <td>
-            Jeffrey Espinal
-        </td>
-        <td>
-            Jespinal1193@gmail.com
-        </td>
-        <td>
-            347-373-3592
-        </td>
-    </tr>
-    <tr>
-        <td>
-            Jeffrey Espinal
-        </td>
-        <td>
-            Jespinal1193@gmail.com
-        </td>
-        <td>
-            347-373-3592
-        </td>
-    </tr>
-</table>
-
-</div>
-
-
-
-
-
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio tempor orci dapibus ultrices in iaculis nunc sed. Bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Adipiscing elit ut aliquam purus sit amet luctus venenatis lectus. Massa enim nec dui nunc. Quis lectus nulla at volutpat. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Nullam vehicula ipsum a arcu cursus vitae congue mauris. Aliquet risus feugiat in ante metus dictum at tempor. Varius vel pharetra vel turpis nunc eget lorem dolor. Eleifend quam adipiscing vitae proin. At risus viverra adipiscing at in tellus integer. Et sollicitudin ac orci phasellus egestas tellus. Justo donec enim diam vulputate ut. Magna ac placerat vestibulum lectus. Quisque sagittis purus sit amet. Sollicitudin nibh sit amet commodo nulla facilisi.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Molestie a iaculis at erat pellentesque adipiscing commodo elit at. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Varius morbi enim nunc faucibus a pellentesque sit. Adipiscing at in tellus integer feugiat. At varius vel pharetra vel turpis nunc eget lorem. Adipiscing elit duis tristique sollicitudin nibh. Tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Id cursus metus aliquam eleifend mi in nulla posuere. Facilisis magna etiam tempor orci.
+        </p>
+    </section>
+    <section>
+        <h2>Leaders</h2>
+        <div>
+            <table class="table-center">
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+                <tr>
+                    <td>Jeffrey Espinal</td>
+                    <td>Jespinal1193@gmail.com</td>
+                    <td>347-373-3592</td>
+                </tr>
+                <tr>
+                    <td>Jeffrey Espinal</td>
+                    <td>Jespinal1193@gmail.com</td>
+                    <td>347-373-3592</td>
+                </tr>
+                <tr>
+                    <td>Jeffrey Espinal</td>
+                    <td>Jespinal1193@gmail.com</td>
+                    <td>347-373-3592</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+</body>
+</html>
